--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,32 @@ click
 itsdangerous
 jinja2
 markupsafe
+blinker
+certifi
+charset-normalizer
+idna
+urllib3
+anyio
+distro
+httpx
+httpcore
+jiter
+pydantic
+pydantic-core
+typing-extensions
+aiohttp
+multidict
+yarl
+aiohappyeyeballs
+aiohttp-retry
+aiosignal
+annotated-types
+attrs
+frozenlist
+h11
+propcache
+sniffio
+tqdm
+typing-inspection
+packaging
+PyJWT
