--- a/requirements.txt
+++ b/requirements.txt
@@ -40,3 +40,7 @@ tqdm
 typing-inspection
 packaging
 PyJWT
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.1.1
+google-api-python-client==2.108.0
